fix category progress message width for tshort sections being too long when translated

--- a/src/styling/survey/progressBar.css
+++ b/src/styling/survey/progressBar.css
@@ -1,6 +1,7 @@
 .progress-message {
   margin: 0;
   font-size: 0.8rem;
+  max-width: 200px;
 }
 
 .progress {
@@ -22,5 +23,9 @@
   .progress {
     height: 14px;
     width: 180px;
+  }
+
+  .progress-message {
+    max-width: 100%;
   }
 }
